<?xml version="1.0"?>
<package>
  <name>squirrel_dynamic_filter</name>
  <version>0.0.1</version>
  <description>The dynamic_filter package</description>
  <maintainer email="dewan@cs.uni-freiburg.de">dewan</maintainer>


  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <run_depend>pcl_ros</run_depend>
  <build_depend>squirrel_dynamic_filter_msgs</build_depend>
  <run_depend>squirrel_dynamic_filter_msgs</run_depend>
  <build_depend>pcl_conversions</build_depend>
  <run_depend>pcl_conversions</run_depend>
  <build_depend>tf</build_depend>
  <build_depend>message_generation</build_depend> 
  <run_depend>message_generation</run_depend> 
  <run_depend>message_runtime</run_depend> 



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
