<?xml version="1.0"?>
<package>
  <name>squirrel_footprint_observer</name>
  <version>0.0.0</version>
  <description>The squirrel_footprint_observer package</description>

  <maintainer email="boniardi@cs.uni-freiburg.de">Federico Boniardi</maintainer>

  <license>
    Copyright (C) 2017  Federico Boniardi and Wolfram Burgard

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.
    
    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.
    
    You should have received a copy of the GNU General Public License
    along with this program.
  </license>

  <author>Federico Boniardi</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend> 
  <build_depend>message_runtime</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>squirrel_footprint_observer_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>yaml-cpp</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_generation</run_depend> 
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>squirrel_footprint_observer_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>yaml-cpp</run_depend>

</package>
