<?xml version="1.0"?>
<package>
  <name>squirrel_footprint_observer</name>
  <version>1.0.0</version>
  <description>Robot footprint for changeable configurations.</description>

  <maintainer email="boniardi@cs.uni-freiburg.de"/>

  <license>GPLv3</license>

  <author>Federico Boniardi</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cgal</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend> 
  <build_depend>message_runtime</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>squirrel_footprint_observer_msgs</build_depend>
  <build_depend>std_msgs</build_depend> 
  <build_depend>tf</build_depend>
  <build_depend>yaml-cpp</build_depend>

  <run_depend>cgal</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_generation</run_depend> 
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>squirrel_footprint_observer_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>yaml-cpp</run_depend>

</package>
