<?xml version="1.0"?>
<package format="2">
  <name>squirrel_footprint_observer</name>
  <version>1.0.0</version>
  <description>Robot footprint for changeable configurations.</description>

  <maintainer email="boniardi@cs.uni-freiburg.de"/>

  <license>GPLv3</license>

  <author>Federico Boniardi</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cgal</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>geometry_msgs</depend>
  <depend>message_generation</depend> 
  <depend>message_runtime</depend>
  <depend>roscpp</depend>
  <depend>squirrel_footprint_observer_msgs</depend>
  <depend>std_msgs</depend> 
  <depend>tf</depend>
  <depend>yaml-cpp</depend>

</package>
