<?xml version="1.0"?>
<package>
  <name>squirrel_localizer</name>
  <version>1.0.0</version>
  <description>
    Monte Carlo Localisation with KLD sampling 
  </description>  

  <author email="roewekae@cs.uni-freiburg.de">Joerg Roewekaemper</author>

  <maintainer email="boniardi@cs.uni-freiburg.de">Federico Boniardi</maintainer>
  
  <license>TBD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>laser_geometry</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>robotino_msgs</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>squirrel_localizer_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>laser_geometry</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>robotino_msgs</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>scan_tools</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>squirrel_localizer_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>tf</run_depend>

  <export>
  </export>
</package>


