<?xml version="1.0"?>
<package>

  <name>squirrel_nav</name>

  <version>2.0.0</version>

  <description>
    Everything related to navigation.
  </description>

  <maintainer email="nhg@ipa.fhg.de">Nadia Hammoudeh Garcia</maintainer>

  <license>MIT</license>

  <author email="boniardi@cs.uni-freiburg.de">Federico Bonairdi</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>squirrel_2d_localizer</run_depend>
  <run_depend>squirrel_3d_localizer</run_depend>
  <run_depend>squirrel_3d_mapping</run_depend>
  <run_depend>squirrel_dynamic_filter</run_depend>
  <run_depend>squirrel_footprint_observer</run_depend>
  <run_depend>squirrel_navigation</run_depend>
  <run_depend>squirrel_pointcloud_filter</run_depend>

  <export>
    <metapackage/>
  </export>

</package>
